# quran-ayah-lookup

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_ctrl_c.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: general.instructions.md
.github/prompts/: api-feature.prompt.md  changes-to-vector-search.prompt.md  cli-feature.prompt.md  contextual-semantic-vector-search.prompt.md  initialize-package.prompt.md  sliding-window-multiple-ayah.prompt.md
docs/: api.md  index.md  installation.md  quickstart.md
docs/implementation/: ALIGNMENT_ALGORITHM_UPDATE.md  FINALIZATION_SUMMARY.md  PERFORMANCE_ENHANCEMENTS.md  SLIDING_WINDOW_CACHE_ANALYSIS.md  SLIDING_WINDOW_IMPLEMENTATION.md  SMART_SEARCH_IMPLEMENTATION.md
scripts/: build_vector_index.py
src/quran_ayah_lookup/: __init__.py  api.py  cli.py  loader.py  models.py  text_utils.py  vector_search.py
src/quran_ayah_lookup/resources/: quran-uthmani_all.txt  simple-clean.txt  simple-minimal.txt  uthmani.txt
src/quran_ayah_lookup/resources/vector/: bm25_index.pkl  vindex_mapping.json
tests/: conftest.py  test_api.py  test_cli.py  test_fuzzy_search.py  test_init.py  test_multi_db.py  test_sliding_window.py  test_smart_search.py  test_text_utils.py  test_vector_search.py
