[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quran-ayah-lookup"
version = "0.0.2"
description = "A Python package for looking up Quranic ayahs by their number or Arabic text. Uses Quran corpus from Tanzil.net. Arabic only, no translations supported."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sayed Mahmoud", email = "foss-support@sayedmahmoud266.website"}
]
maintainers = [
    {name = "Sayed Mahmoud", email = "foss-support@sayedmahmoud266.website"}
]
keywords = ["quran", "ayah", "lookup", "islamic", "search", "text"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Religion",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Religion",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rapidfuzz>=3.0.0",
    "click>=8.0.0",
]

[project.scripts]
quran-ayah-lookup = "quran_ayah_lookup.cli:main"
qal = "quran_ayah_lookup.cli:main"

[project.urls]
Homepage = "https://github.com/sayedmahmoud266/quran-ayah-lookup"
Repository = "https://github.com/sayedmahmoud266/quran-ayah-lookup"
Documentation = "https://github.com/sayedmahmoud266/quran-ayah-lookup/blob/main/README.md"
"Bug Tracker" = "https://github.com/sayedmahmoud266/quran-ayah-lookup/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "build>=0.8",
    "twine>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true